# editor

./: CMakeLists.txt  README.md
src/: main.mm
src/core/: buffer.cpp  buffer.hpp  rope.cpp  rope.hpp
src/ui/: editor.hpp  editor.mm
